--- a/app/src/main/res/layout/activity_edit_pelanggan.xml
+++ b/app/src/main/res/layout/activity_edit_pelanggan.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="20dp"
     tools:context=".EditPelangganActivity">
 
     <EditText
@@ -12,7 +11,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
-        android:hint="Nama Pelanggan"
+        android:hint="Nama Lengkap"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -22,22 +21,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
-        android:hint="Nomer HP Pelanggan"
+        android:hint="No_HP"
         android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_merk" />
-
-    <EditText
-        android:id="@+id/txt_harga"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:hint="Harga"
-        android:inputType="number"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_stok" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_nama" />
 
     <Button
         android:id="@+id/btn_savePelanggan"
@@ -47,6 +35,7 @@
         android:text="SAVE"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_harga" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_nohp" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
