--- a/app/src/main/res/layout/activity_edit_sepatu.xml
+++ b/app/src/main/res/layout/activity_edit_sepatu.xml
@@ -49,4 +49,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_harga" />
 
+    <Button
+        android:id="@+id/btn_updateSepatu"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="17dp"
+        android:text="UPDATE"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_saveSepatu" />
 </androidx.constraintlayout.widget.ConstraintLayout>
