--- a/app/src/main/res/layout/activity_edit_pelanggan.xml
+++ b/app/src/main/res/layout/activity_edit_pelanggan.xml
@@ -36,6 +36,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_nohp" />
+    <Button
+        android:id="@+id/btn_updatePelanggan"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="17dp"
+        android:text="UPDATE"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btn_savePelanggan" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
