--- a/app/src/main/res/layout/activity_edit_karyawan.xml
+++ b/app/src/main/res/layout/activity_edit_karyawan.xml
@@ -23,7 +23,6 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:hint="Username"
-        android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txt_nama" />
@@ -33,11 +32,12 @@
         android:id="@+id/btn_saveKaryawan"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="17dp"
+        android:layout_marginTop="168dp"
         android:text="SAVE"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.6"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txt_nama" />
+        app:layout_constraintTop_toBottomOf="@+id/txt_username" />
 
     <Button
         android:id="@+id/btn_updateKaryawan"
